[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerone"
version = "1.1.0"
description = "Zero Trust Security for AI Agents"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Homer Semantics", email = "info@homersemantics.com" }
]
keywords = ["ai", "agents", "security", "zero-trust", "validation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "aiohttp>=3.8",
]

[project.urls]
Homepage    = "https://www.homersemantics.com/ai-agent-governance-and-oauth"
Repository  = "https://github.com/AnantDhavale/cerone_sdk"
"Bug Tracker" = "https://github.com/AnantDhavale/cerone_sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_governance*", "cerone*"]
